# field-assist-bot

./: .env.example  .gitignore  Dockerfile  Field-Assist-Bot — Implementation Plan.md  ONBOARDING.md  PERSONA.md  README.md  SCTO API doc.md  alembic.ini  docker-compose.yml  pyproject.toml  run-bot.bat  run-bot.ps1  subsections.txt
.cache/: cases_icm.csv  knowledge_candidates.jsonl  progress_snapshots.jsonl  remote_jobs_log.jsonl
.github/workflows/: ci.yml  deploy.yml  kb-index.yml
docs/knowledge_base/: announcement_templates.md  bot_escalation_rules.md  bot_escalation_rules_addition.md  case_pipeline.md  case_status_rules.md  data_quality_rules.md  deployment_schedule.md  faq_field_scenarios.md  known_issues_and_fixes.md  protocol.md  psps_questionnaire_guide.md
field_assist_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: export_brgy_lookup.py  index_knowledge_base.py  parse_questionnaire.py  probe_cases_download.py  seed_db.py
src/: __init__.py  __main__.py  bot.py  cli.py  config.py  health.py
src/cogs/: admin.py  announcements.py  assignments.py  automation.py  cases.py  forms.py  mentions.py  progress.py  protocol.py  remote_control.py  triage.py
src/db/: __init__.py  engine.py
src/integrations/: __init__.py  google_sheets.py  openai_client.py  surveycto.py
src/knowledge/: __init__.py  collector.py  confidence.py  indexer.py  prompt_builder.py  retriever.py
src/models/: __init__.py  announcement.py  case.py  escalation.py  form_version.py  interaction.py
src/services/: __init__.py  announcement_service.py  assignment_service.py  (+12 more)
(+22 files in other folders)
